--- a/html/equal-angle.jade
+++ b/html/equal-angle.jade
@@ -31,7 +31,7 @@ html
                 .form-group
                     label
                         input#eq(type='checkbox', checked)
-                        |Equal branch length
+                        |Ignore branch length
                 .form
                     .form-group
                         a#ad Advanced options
