local font, and scroll to the plot when it is ready

--- a/html/equal-angle.jade
+++ b/html/equal-angle.jade
@@ -3,7 +3,7 @@ html
     head
         meta(charset='utf-8')
         link(href='../css/bootstrap.min.css',rel="stylesheet",type="text/css")
-        link(href='http://fonts.googleapis.com/css?family=Fondamento|Monda|Strait|Source+Sans+Pro|Alegreya|Poiret+One',rel='stylesheet',type='text/css')
+        // link(href='http://fonts.googleapis.com/css?family=Fondamento|Monda|Strait|Source+Sans+Pro|Alegreya|Poiret+One',rel='stylesheet',type='text/css')
         link(href='../css/basic.css',rel="stylesheet",type="text/css")
         title PhyloPlot
         style.
