--- a/index.jade
+++ b/index.jade
@@ -50,8 +50,8 @@ html
                     |Invalid tree.
                 #tp
 
-        script(src='../js/jquery-2.1.1.min.js')
-        script(src='../js/d3.min.js',type="text/javascript")
-        script(src='../js/FileSaver.min.js',type="text/javascript")
-        script(src="../coffee/tree.js",type="text/javascript")
-        script(src="../coffee/eqplot.js",type="text/javascript")
+        script(src='/js/jquery-2.1.1.min.js')
+        script(src='/js/d3.min.js',type="text/javascript")
+        script(src='/js/FileSaver.min.js',type="text/javascript")
+        script(src="/coffee/tree.js",type="text/javascript")
+        script(src="/coffee/eqplot.js",type="text/javascript")
