--- a/index.jade
+++ b/index.jade
@@ -2,9 +2,9 @@ doctype html
 html
     head
         meta(charset='utf-8')
-        link(href='/PhyloPlot/css/bootstrap.min.css',rel="stylesheet",type="text/css")
+        link(href='./css/bootstrap.min.css',rel="stylesheet",type="text/css")
         // link(href='http://fonts.googleapis.com/css?family=Fondamento|Monda|Strait|Source+Sans+Pro|Alegreya|Poiret+One',rel='stylesheet',type='text/css')
-        link(href='/PhyloPlot/css/basic.css',rel="stylesheet",type="text/css")
+        link(href='./css/basic.css',rel="stylesheet",type="text/css")
         title PhyloPlot
         style.
             .container{width:90%}
@@ -50,8 +50,8 @@ html
                     |Invalid tree.
                 #tp
 
-        script(src='/PhyloPlot/js/jquery-2.1.1.min.js')
-        script(src='/PhyloPlot/js/d3.min.js',type="text/javascript")
-        script(src='/PhyloPlot/js/FileSaver.min.js',type="text/javascript")
-        script(src="/PhyloPlot/coffee/tree.js",type="text/javascript")
-        script(src="/PhyloPlot/coffee/eqplot.js",type="text/javascript")
+        script(src='./js/jquery-2.1.1.min.js')
+        script(src='./js/d3.min.js',type="text/javascript")
+        script(src='./js/FileSaver.min.js',type="text/javascript")
+        script(src="./coffee/tree.js",type="text/javascript")
+        script(src="./coffee/eqplot.js",type="text/javascript")
